--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,116 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "# Your solution goes here\n",
+        "\n",
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "import math\n",
+        "\n",
+        "def build_url(title_type, user_rating, start_date, end_date):\n",
+        "    base_url = \"https://www.imdb.com/search/title/\"\n",
+        "    url = f\"{base_url}?title_type={title_type}&user_rating={user_rating},&release_date={start_date},{end_date}&count=50\"\n",
+        "    return url\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    url = build_url(title_type, user_rating, start_date, end_date)\n",
+        "    response = requests.get(url)\n",
+        "    \n",
+        "    if response.status_code != 200:\n",
+        "        print(f\"Failed to retrieve data: {response.status_code}\")\n",
+        "        return pd.DataFrame()\n",
+        "\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    movies_list = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "\n",
+        "    data = []\n",
+        "    \n",
+        "    for idx, movie in enumerate(movies_list):\n",
+        "        # Extract title\n",
+        "        title = movie.h3.a.text\n",
+        "        \n",
+        "        # Extract release year\n",
+        "        year = movie.h3.find('span', class_='lister-item-year').text.strip('()')\n",
+        "\n",
+        "        # Extract IMDb rating\n",
+        "        rating = movie.find('div', class_='inline-block ratings-imdb-rating')\n",
+        "        rating = rating['data-value'] if rating else None\n",
+        "\n",
+        "        # Extract runtime\n",
+        "        runtime = movie.find('span', class_='runtime')\n",
+        "        runtime = runtime.text.split()[0] if runtime else None\n",
+        "        \n",
+        "        # Extract genre\n",
+        "        genre = movie.find('span', class_='genre')\n",
+        "        genre = genre.text.strip() if genre else None\n",
+        "\n",
+        "        # Extract description\n",
+        "        description = movie.find_all('p', class_='text-muted')[1].text.strip()\n",
+        "\n",
+        "        # Extract director and stars\n",
+        "        credit = movie.find('p', class_='')\n",
+        "        directors = []\n",
+        "        stars = []\n",
+        "        for a in credit.find_all('a'):\n",
+        "            if 'adv_li_dr' in a['href']:\n",
+        "                directors.append(a.text)\n",
+        "            if 'adv_li_st' in a['href']:\n",
+        "                stars.append(a.text)\n",
+        "\n",
+        "        # Extract votes and gross earnings\n",
+        "        votes_and_gross = movie.find_all('span', attrs={'name': 'nv'})\n",
+        "        votes = votes_and_gross[0].text if len(votes_and_gross) > 0 else None\n",
+        "        gross = votes_and_gross[1].text if len(votes_and_gross) > 1 else None\n",
+        "\n",
+        "        # Append to data list\n",
+        "        data.append({\n",
+        "            'Movie Nr': idx + 1,\n",
+        "            'Title': title,\n",
+        "            'Year': year,\n",
+        "            'Rating': rating,\n",
+        "            'Runtime (min)': runtime,\n",
+        "            'Genre': genre,\n",
+        "            'Description': description,\n",
+        "            'Director': ', '.join(directors),\n",
+        "            'Stars': ', '.join(stars),\n",
+        "            'Votes': votes,\n",
+        "            'Gross ($M)': gross\n",
+        "        })\n",
+        "\n",
+        "    # Convert to DataFrame\n",
+        "    df = pd.DataFrame(data)\n",
+        "    return df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "id": "1f049c8b",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Failed to retrieve data: 403\n",
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Example usage\n",
+        "df = scrape_imdb('feature', '7.5', '1990-01-01', '1992-12-31')\n",
+        "print(df.head())"
       ]
     },
     {
@@ -151,18 +253,164 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea",
       "metadata": {
         "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea"
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "# Your solution goes here\n",
+        "def build_url(title_type, user_rating, start_date, end_date, start=1):\n",
+        "    \"\"\"\n",
+        "    Construct the URL for IMDb search with pagination.\n",
+        "    \"\"\"\n",
+        "    base_url = \"https://www.imdb.com/search/title/\"\n",
+        "    url = f\"{base_url}?title_type={title_type}&user_rating={user_rating},&release_date={start_date},{end_date}&start={start}&ref_=adv_nxt\"\n",
+        "    return url\n",
+        "\n",
+        "def get_total_movies(soup):\n",
+        "    \"\"\"\n",
+        "    Extract the total number of movies from the search results page.\n",
+        "    \"\"\"\n",
+        "    results_text = soup.find('div', class_='desc').span.text\n",
+        "    total_movies = int(results_text.split()[-2].replace(',', ''))\n",
+        "    return total_movies\n",
+        "\n",
+        "def scrape_page(url):\n",
+        "    \"\"\"\n",
+        "    Scrape the data from a single page of IMDb search results.\n",
+        "    \"\"\"\n",
+        "    response = requests.get(url)\n",
+        "    \n",
+        "    if response.status_code != 200:\n",
+        "        print(f\"Failed to retrieve data: {response.status_code}\")\n",
+        "        return []\n",
+        "    \n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    movies_list = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "\n",
+        "    data = []\n",
+        "    \n",
+        "    for idx, movie in enumerate(movies_list):\n",
+        "        # Extract title\n",
+        "        title = movie.h3.a.text\n",
+        "        \n",
+        "        # Extract release year\n",
+        "        year = movie.h3.find('span', class_='lister-item-year').text.strip('()')\n",
+        "\n",
+        "        # Extract IMDb rating\n",
+        "        rating = movie.find('div', class_='inline-block ratings-imdb-rating')\n",
+        "        rating = rating['data-value'] if rating else None\n",
+        "\n",
+        "        # Extract runtime\n",
+        "        runtime = movie.find('span', class_='runtime')\n",
+        "        runtime = runtime.text.split()[0] if runtime else None\n",
+        "        \n",
+        "        # Extract genre\n",
+        "        genre = movie.find('span', class_='genre')\n",
+        "        genre = genre.text.strip() if genre else None\n",
+        "\n",
+        "        # Extract description\n",
+        "        description = movie.find_all('p', class_='text-muted')[1].text.strip()\n",
+        "\n",
+        "        # Extract director and stars\n",
+        "        credit = movie.find('p', class_='')\n",
+        "        directors = []\n",
+        "        stars = []\n",
+        "        for a in credit.find_all('a'):\n",
+        "            if 'adv_li_dr' in a['href']:\n",
+        "                directors.append(a.text)\n",
+        "            if 'adv_li_st' in a['href']:\n",
+        "                stars.append(a.text)\n",
+        "\n",
+        "        # Extract votes and gross earnings\n",
+        "        votes_and_gross = movie.find_all('span', attrs={'name': 'nv'})\n",
+        "        votes = votes_and_gross[0].text if len(votes_and_gross) > 0 else None\n",
+        "        gross = votes_and_gross[1].text if len(votes_and_gross) > 1 else None\n",
+        "\n",
+        "        # Append to data list\n",
+        "        data.append({\n",
+        "            'Title': title,\n",
+        "            'Year': year,\n",
+        "            'Rating': rating,\n",
+        "            'Runtime (min)': runtime,\n",
+        "            'Genre': genre,\n",
+        "            'Description': description,\n",
+        "            'Director': ', '.join(directors),\n",
+        "            'Stars': ', '.join(stars),\n",
+        "            'Votes': votes,\n",
+        "            'Gross ($M)': gross\n",
+        "        })\n",
+        "\n",
+        "    return data\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    \"\"\"\n",
+        "    Scrape IMDb for movies based on title type, user rating, and date range across multiple pages.\n",
+        "    \"\"\"\n",
+        "    url = build_url(title_type, user_rating, start_date, end_date)\n",
+        "    response = requests.get(url)\n",
+        "    \n",
+        "    if response.status_code != 200:\n",
+        "        print(f\"Failed to retrieve data: {response.status_code}\")\n",
+        "        return pd.DataFrame()\n",
+        "\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    \n",
+        "    # Extract total number of movies\n",
+        "    total_movies = get_total_movies(soup)\n",
+        "    print(f\"Total number of movies to scrape: {total_movies}\")\n",
+        "    \n",
+        "    # Calculate the number of pages\n",
+        "    movies_per_page = 50\n",
+        "    total_pages = math.ceil(total_movies / movies_per_page)\n",
+        "\n",
+        "    all_data = []\n",
+        "    \n",
+        "    # Scrape each page\n",
+        "    for page in range(1, total_pages + 1):\n",
+        "        start = (page - 1) * movies_per_page + 1\n",
+        "        url = build_url(title_type, user_rating, start_date, end_date, start=start)\n",
+        "        print(f\"Scraping page {page} with URL: {url}\")\n",
+        "        \n",
+        "        page_data = scrape_page(url)\n",
+        "        all_data.extend(page_data)\n",
+        "\n",
+        "    # Convert to DataFrame\n",
+        "    df = pd.DataFrame(all_data)\n",
+        "    return df\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "id": "a85f8f0c",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Failed to retrieve data: 403\n",
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Example usage\n",
+        "df = scrape_imdb('feature', '7.5', '1990-01-01', '1992-12-31')\n",
+        "print(df.head())"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +426,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
