Solution Web Scraping

--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,95 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Empty DataFrame\n",
+            "Columns: [Movie Nr, Title, Year, Rating, Runtime (min), Genre, Description, Director, Stars, Votes, Gross ($M)]\n",
+            "Index: []\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "# Your solution goes here\n",
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "import re\n",
+        "\n",
+        "def scrape_imdb(title_type='feature', user_rating='7.5', start_date='1990-01-01', end_date='1992-12-31') :\n",
+        "    # Construct the URL based on user inputs\n",
+        "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&user_rating={user_rating},&release_date={start_date},{end_date}\"\n",
+        "    \n",
+        "    # Send a request to the website\n",
+        "    response = requests.get(url)\n",
+        "    \n",
+        "    # Parse the content using BeautifulSoup\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    \n",
+        "    # Extract movie containers\n",
+        "    movie_containers = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "    \n",
+        "    # Lists to hold the extracted data\n",
+        "    movies_list = []\n",
+        "    \n",
+        "    for idx, movie in enumerate(movie_containers):\n",
+        "        # Movie Nr\n",
+        "        movie_nr = idx + 1\n",
+        "        \n",
+        "        # Title\n",
+        "        title = movie.h3.a.text\n",
+        "        \n",
+        "        # Year\n",
+        "        year = movie.h3.find('span', class_='lister-item-year').text\n",
+        "        year = re.sub(r'[^\\d]', '', year)  # Remove non-numeric characters\n",
+        "        \n",
+        "        # Rating\n",
+        "        rating = movie.find('div', class_='inline-block ratings-imdb-rating')\n",
+        "        rating = rating['data-value'] if rating else 'N/A'\n",
+        "        \n",
+        "        # Runtime\n",
+        "        runtime = movie.find('span', class_='runtime')\n",
+        "        runtime = runtime.text.replace(' min', '') if runtime else 'N/A'\n",
+        "        \n",
+        "        # Genre\n",
+        "        genre = movie.find('span', class_='genre')\n",
+        "        genre = genre.text.strip() if genre else 'N/A'\n",
+        "        \n",
+        "        # Description\n",
+        "        description = movie.find_all('p', class_='text-muted')[-1].text.strip()\n",
+        "        \n",
+        "        # Director & Stars\n",
+        "        people = movie.find('p', class_='')\n",
+        "        people = people.text.strip().split('|')\n",
+        "        \n",
+        "        director = people[0].replace('Director:', '').replace('Directors:', '').strip() if len(people) > 0 else 'N/A'\n",
+        "        stars = people[1].replace('Stars:', '').strip() if len(people) > 1 else 'N/A'\n",
+        "        \n",
+        "        # Votes and Gross Earnings\n",
+        "        votes_gross = movie.find_all('span', attrs={'name': 'nv'})\n",
+        "        votes = votes_gross[0].text if len(votes_gross) > 0 else 'N/A'\n",
+        "        gross = votes_gross[1].text.replace('$', '').replace('M', '') if len(votes_gross) > 1 else 'N/A'\n",
+        "        \n",
+        "        # Append the movie data to the list\n",
+        "        movies_list.append([movie_nr, title, year, rating, runtime, genre, description, director, stars, votes, gross])\n",
+        "    \n",
+        "    # Create DataFrame\n",
+        "    movies_df = pd.DataFrame(movies_list, columns=['Movie Nr', 'Title', 'Year', 'Rating', 'Runtime (min)', 'Genre', \n",
+        "                                                   'Description', 'Director', 'Stars', 'Votes', 'Gross ($M)'])\n",
+        "    \n",
+        "    return movies_df\n",
+        "\n",
+        "# Example usage\n",
+        "df = scrape_imdb('feature', '7.5', '1990-01-01', '1992-12-31')\n",
+        "print(df.head())\n"
       ]
     },
     {
@@ -163,6 +244,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +262,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.12.4"
     }
   },
   "nbformat": 4,
