Solution Lab Web Scraping

--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,273 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "40359eee-9cd7-4884-bfa4-83344c222305",
-      "metadata": {
-        "id": "40359eee-9cd7-4884-bfa4-83344c222305"
-      },
+      "execution_count": 1,
+      "id": "a23f08fe",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "import pandas as pd\n",
+        "from bs4 import BeautifulSoup\n",
+        "import requests"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "id": "806710fe",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "headers = {\n",
+        "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3',\n",
+        "    'Accept-Language': 'en-US,en;q=0.9',\n",
+        "    'Accept-Encoding': 'gzip, deflate, br',\n",
+        "    'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8',\n",
+        "    'Connection': 'keep-alive',\n",
+        "    'Upgrade-Insecure-Requests': '1',\n",
+        "    'Referer': 'https://www.google.com'\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "id": "f8385927",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "url = 'https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,'\n",
+        "    \n",
+        "response = requests.get(url, headers=headers)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "id": "da988533",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "soup = BeautifulSoup(response.content, 'html.parser')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "39e98fe1",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "soup.find_all('li', class_='ipc-metadata-list-summary-item')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "57f7aa77",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "titles = soup.find_all('h3', class_='ipc-title__text')\n",
+        "titles"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "cb8756f5",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Extraer solo los títulos de las películas que están en etiquetas <h3>\n",
+        "titles = soup.find_all('h3', class_='ipc-title__text')\n",
+        "\n",
+        "# Extraer tanto el número como el título\n",
+        "movie_numbers = [title.text.split('. ', 1)[0] for title in titles if '. ' in title.text]  # Obtiene el número\n",
+        "movie_titles = [title.text.split('. ', 1)[1] for title in titles if '. ' in title.text]  # Obtiene el título\n",
+        "\n",
+        "# Ver los resultados\n",
+        "print(\"Números de películas:\", movie_numbers)\n",
+        "print(\"Títulos de películas:\", movie_titles)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "5e9c4799",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "years = soup.find_all(class_='sc-b189961a-8 hCbzGp dli-title-metadata-item')\n",
+        "years"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8f034785",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Extraer todos los elementos con la clase que contiene años, duraciones, rating, etc.\n",
+        "metadata_elements = soup.find_all(class_='sc-b189961a-8 hCbzGp dli-title-metadata-item')\n",
+        "\n",
+        "# Listas para almacenar años, duraciones y ratings\n",
+        "years = []\n",
+        "runtimes = []\n",
+        "ratings = []\n",
+        "\n",
+        "# Recorrer los elementos y clasificar los datos\n",
+        "for element in metadata_elements:\n",
+        "    text = element.text.strip()\n",
+        "    \n",
+        "    # Verificar si es un año (número de 4 dígitos)\n",
+        "    if text.isdigit() and len(text) == 4:\n",
+        "        years.append(text)\n",
+        "    # Verificar si es una duración (contiene \"h\" para horas y \"m\" para minutos)\n",
+        "    elif 'h' in text and 'm' in text:\n",
+        "        runtimes.append(text)\n",
+        "    # Verificar si es un rating (probablemente no contiene números ni \"h\" o \"m\")\n",
+        "    elif text in ['G', 'PG', 'PG-13', 'R', 'NC-17']:\n",
+        "        ratings.append(text)\n",
+        "\n",
+        "# Ver los resultados\n",
+        "print(\"Años:\", years)\n",
+        "print(\"Duraciones:\", runtimes)\n",
+        "print(\"Ratings:\", ratings)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9644cc5a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "description = soup.find_all(class_='ipc-html-content-inner-div')\n",
+        "description"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9c8a0a83",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "description_elements = soup.find_all(class_='ipc-html-content-inner-div')\n",
+        "descriptions = [desc.text.strip() for desc in description_elements]\n",
+        "descriptions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "votes = soup.find_all(class_='ipc-rating-star--voteCount')\n",
+        "votes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "bc43c37c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "votes_elements = soup.find_all(class_='ipc-rating-star--voteCount')\n",
+        "votes = [vote.text.strip() for vote in votes_elements]\n",
+        "votes"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Resultado final"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "id": "0e281833",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    # Definir los headers\n",
+        "    headers = {\n",
+        "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3',\n",
+        "        'Accept-Language': 'en-US,en;q=0.9',\n",
+        "        'Accept-Encoding': 'gzip, deflate, br',\n",
+        "        'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8',\n",
+        "        'Connection': 'keep-alive',\n",
+        "        'Upgrade-Insecure-Requests': '1',\n",
+        "        'Referer': 'https://www.google.com'\n",
+        "    }\n",
+        "    \n",
+        "    # 1. Configurar la URL con base en los parámetros proporcionados\n",
+        "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&release_date={start_date},{end_date}&user_rating={user_rating}\"\n",
+        "    \n",
+        "    # 2. Hacer la solicitud HTTP a IMDb con los headers\n",
+        "    response = requests.get(url, headers=headers)\n",
+        "    if response.status_code != 200:\n",
+        "        print(\"Error fetching the IMDb page\")\n",
+        "        return None\n",
+        "    \n",
+        "    # 3. Parsear el contenido HTML con BeautifulSoup\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    \n",
+        "    # 4. Extraer los números y títulos de las películas\n",
+        "    titles = soup.find_all('h3', class_='ipc-title__text')\n",
+        "    movie_numbers = [title.text.split('. ', 1)[0] for title in titles if '. ' in title.text]\n",
+        "    movie_titles = [title.text.split('. ', 1)[1] for title in titles if '. ' in title.text]\n",
+        "    \n",
+        "    # 5. Extraer años, duraciones y ratings\n",
+        "    metadata_elements = soup.find_all(class_='sc-b189961a-8 hCbzGp dli-title-metadata-item')\n",
+        "    \n",
+        "    years = []\n",
+        "    runtimes = []\n",
+        "    ratings = []\n",
+        "    \n",
+        "    for element in metadata_elements:\n",
+        "        text = element.text.strip()\n",
+        "        if text.isdigit() and len(text) == 4:\n",
+        "            years.append(text)\n",
+        "        elif 'h' in text and 'm' in text:\n",
+        "            runtimes.append(text)\n",
+        "        elif text in ['G', 'PG', 'PG-13', 'R', 'NC-17']:\n",
+        "            ratings.append(text)\n",
+        "    \n",
+        "    # 6. Extraer descripción\n",
+        "    description_elements = soup.find_all(class_='ipc-html-content-inner-div')\n",
+        "    descriptions = [desc.text.strip() for desc in description_elements]\n",
+        "    \n",
+        "    # 7. Extraer votos sin modificar el formato\n",
+        "    votes_elements = soup.find_all(class_='ipc-rating-star--voteCount')\n",
+        "    votes = [vote.text.strip() for vote in votes_elements]\n",
+        "\n",
+        "    # 8. Crear el DataFrame con los datos extraídos en el orden especificado\n",
+        "    movie_data = list(zip(movie_numbers, movie_titles, years, ratings, runtimes, descriptions, votes))\n",
+        "    \n",
+        "    # 9. Convertir la lista de datos en un DataFrame de pandas con el orden solicitado\n",
+        "    df = pd.DataFrame(movie_data, columns=[\"Movie Nr\", \"Title\", \"Year\", \"Rating\", \"Runtime (min)\", \"Description\", \"Votes\"])\n",
+        "    \n",
+        "    return df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e6c39db2",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Prueba la función con los parámetros requeridos\n",
+        "df = scrape_imdb('feature', '7.5', '1990-01-01', '1992-12-31')\n",
+        "df"
       ]
     },
     {
@@ -163,6 +422,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +440,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.12.4"
     }
   },
   "nbformat": 4,
