--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,278 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "40359eee-9cd7-4884-bfa4-83344c222305",
-      "metadata": {
-        "id": "40359eee-9cd7-4884-bfa4-83344c222305"
-      },
+      "execution_count": 29,
+      "id": "92f90b66",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_imdb(title_type, min_user_rating, start_date, end_date):\n",
+        "    headers = {\n",
+        "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3',\n",
+        "        'Accept-Language': 'en-US,en;q=0.9',\n",
+        "        'Accept-Encoding': 'gzip, deflate, br',\n",
+        "        'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8',\n",
+        "        'Connection': 'keep-alive',\n",
+        "        'Upgrade-Insecure-Requests': '1',\n",
+        "        'Referer': 'https://www.google.com'\n",
+        "    }\n",
+        "    \n",
+        "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&release_date={start_date},{end_date}&user_rating={min_user_rating}\"\n",
+        "\n",
+        "    response = requests.get(url, headers=headers)\n",
+        "    \n",
+        "    if response.status_code != 200:\n",
+        "        print(f\"Error: Received response code {response.status_code}\")\n",
+        "        return pd.DataFrame()\n",
+        "    \n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "\n",
+        "    # Imprimir una parte del HTML para verificar la estructura\n",
+        "    print(soup.prettify()[:1000])  # Muestra los primeros 1000 caracteres del HTML\n",
+        "    \n",
+        "    # Lista para almacenar los datos de cada título\n",
+        "    titles = []\n",
+        "    \n",
+        "    # Encontrar todos los contenedores de títulos\n",
+        "    containers = soup.find_all('li', class_='ipc-metadata-list-summary-item')\n",
+        "    \n",
+        "    if not containers:\n",
+        "        print(\"No se encontraron contenedores de títulos.\")\n",
+        "        return pd.DataFrame()\n",
+        "\n",
+        "    for container in containers:\n",
+        "        # Extraer el título\n",
+        "        title_tag = container.find('h3', class_='ipc-title__text')          # Esto lo se yendo a la web y haciendo click derecho en uno de los títulos e inspeccionar, ahí se ve que hay un h3 con la clase ipc-title__text\n",
+        "        if title_tag:\n",
+        "            title = title_tag.get_text(strip=True)      # strip=True elimina espacios en blanco a los lados\n",
+        "            titles.append(title)\n",
+        "    \n",
+        "    # Convertir la lista de títulos a un DataFrame de pandas para una mejor visualización\n",
+        "    df = pd.DataFrame(titles, columns=['title'])\n",
+        "    \n",
+        "    return df\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "id": "bd46e47d",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<!DOCTYPE html>\n",
+            "<html lang=\"en-US\" xmlns:fb=\"http://www.facebook.com/2008/fbml\" xmlns:og=\"http://opengraphprotocol.org/schema/\">\n",
+            " <head>\n",
+            "  <meta charset=\"utf-8\"/>\n",
+            "  <meta content=\"width=device-width\" name=\"viewport\"/>\n",
+            "  <script>\n",
+            "   if(typeof uet === 'function'){ uet('bb', 'LoadTitle', {wb: 1}); }\n",
+            "  </script>\n",
+            "  <script>\n",
+            "   window.addEventListener('load', (event) => {\n",
+            "        if (typeof window.csa !== 'undefined' && typeof window.csa === 'function') {\n",
+            "            var csaLatencyPlugin = window.csa('Content', {\n",
+            "                element: {\n",
+            "                    slotId: 'LoadTitle',\n",
+            "                    type: 'service-call'\n",
+            "                }\n",
+            "            });\n",
+            "            csaLatencyPlugin('mark', 'clickToBodyBegin', 1725916204182);\n",
+            "        }\n",
+            "    })\n",
+            "  </script>\n",
+            "  <title>\n",
+            "   Advanced search\n",
+            "  </title>\n",
+            "  <meta content=\"\" data-id=\"main\" name=\"description\"/>\n",
+            "  <meta content=\"https://www.imdb.com/search/\" property=\"og:url\"/>\n",
+            "  <meta content=\"IMDb\" property=\"og:site_name\"/>\n",
+            "  <meta content=\"Advanced searc\n"
+          ]
+        }
+      ],
+      "source": [
+        "df = scrape_imdb('feature', 7.5, '1990-01-01', '1992-12-31')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "id": "f79e213f",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>title</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1. The Silence of the Lambs</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2. Terminator 2: Judgment Day</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3. Goodfellas</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4. Edward Scissorhands</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5. Reservoir Dogs</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>6. Home Alone</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>7. My Cousin Vinny</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>8. The Last of the Mohicans</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>9. A Few Good Men</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>10. Unforgiven</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>11. The Godfather Part III</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>12. Total Recall</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>13. Scent of a Woman</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>14. Thelma &amp; Louise</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>15. Aladdin</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>16. Misery</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>17. Dances with Wolves</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>18. Fried Green Tomatoes</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18</th>\n",
+              "      <td>19. Beauty and the Beast</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19</th>\n",
+              "      <td>20. The Hunt for Red October</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>20</th>\n",
+              "      <td>21. JFK</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>21</th>\n",
+              "      <td>22. Awakenings</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>22</th>\n",
+              "      <td>23. Boyz n the Hood</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>23</th>\n",
+              "      <td>24. The Player</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>24</th>\n",
+              "      <td>25. Dead Alive</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                            title\n",
+              "0     1. The Silence of the Lambs\n",
+              "1   2. Terminator 2: Judgment Day\n",
+              "2                   3. Goodfellas\n",
+              "3          4. Edward Scissorhands\n",
+              "4               5. Reservoir Dogs\n",
+              "5                   6. Home Alone\n",
+              "6              7. My Cousin Vinny\n",
+              "7     8. The Last of the Mohicans\n",
+              "8               9. A Few Good Men\n",
+              "9                  10. Unforgiven\n",
+              "10     11. The Godfather Part III\n",
+              "11               12. Total Recall\n",
+              "12           13. Scent of a Woman\n",
+              "13            14. Thelma & Louise\n",
+              "14                    15. Aladdin\n",
+              "15                     16. Misery\n",
+              "16         17. Dances with Wolves\n",
+              "17       18. Fried Green Tomatoes\n",
+              "18       19. Beauty and the Beast\n",
+              "19   20. The Hunt for Red October\n",
+              "20                        21. JFK\n",
+              "21                 22. Awakenings\n",
+              "22            23. Boyz n the Hood\n",
+              "23                 24. The Player\n",
+              "24                 25. Dead Alive"
+            ]
+          },
+          "execution_count": 34,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df"
       ]
     },
     {
@@ -150,8 +414,36 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "13e1b282",
+      "metadata": {},
+      "source": [
+        "## BONUS\n",
+        "\n",
+        "The search results span multiple pages, housing a total of 631 movies in our example with each page displaying 50 movies at most. To scrape data seamlessly from all pages, you'll need to dive deep into the structure of the URLs generated with each \"Next\" click.\n",
+        "\n",
+        "Take a close look at the following URLs:\n",
+        "- First page:\n",
+        "  ```\n",
+        "  https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,\n",
+        "  ```\n",
+        "- Second page:\n",
+        "  ```\n",
+        "  https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=51&ref_=adv_nxt\n",
+        "  ```\n",
+        "- Third page:\n",
+        "  ```\n",
+        "  https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=101&ref_=adv_nxt\n",
+        "  ```\n",
+        "\n",
+        "You should notice a pattern. There is a `start` parameter incrementing by 50 with each page, paired with a constant `ref_` parameter holding the value \"adv_nxt\".\n",
+        "\n",
+        "Modify your script so it's capable of iterating over all available pages to fetch data on all the 631 movies (631 is the total number of movies in the proposed example)."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea",
       "metadata": {
         "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea"
@@ -163,6 +455,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +473,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.12.4"
     }
   },
   "nbformat": 4,
