--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,94 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "40359eee-9cd7-4884-bfa4-83344c222305",
-      "metadata": {
-        "id": "40359eee-9cd7-4884-bfa4-83344c222305"
-      },
-      "outputs": [],
+      "execution_count": 17,
+      "id": "b40b79ec",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "  Movie Nr                       Title  Year Rating Runtime (min)  \\\n",
+            "0        1    The Silence of the Lambs  1991      R        1h 58m   \n",
+            "1        2  Terminator 2: Judgment Day  1991      R        2h 17m   \n",
+            "2        3                  Goodfellas  1990      R        2h 25m   \n",
+            "3        4         Edward Scissorhands  1990  PG-13        1h 45m   \n",
+            "4        5              Reservoir Dogs  1992      R        1h 39m   \n",
+            "\n",
+            "                                         Description   Votes  \n",
+            "0  A young F.B.I. cadet must receive the help of ...  (1.6M)  \n",
+            "1  A cyborg, identical to the one who failed to k...  (1.2M)  \n",
+            "2  The story of Henry Hill and his life in the ma...  (1.3M)  \n",
+            "3  The solitary life of an artificial man - who w...  (531K)  \n",
+            "4  When a simple jewelry heist goes horribly wron...  (1.1M)  \n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    # Definir los headers\n",
+        "    headers = {\n",
+        "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3',\n",
+        "        'Accept-Language': 'en-US,en;q=0.9',\n",
+        "        'Accept-Encoding': 'gzip, deflate, br',\n",
+        "        'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8',\n",
+        "        'Connection': 'keep-alive',\n",
+        "        'Upgrade-Insecure-Requests': '1',\n",
+        "        'Referer': 'https://www.google.com'\n",
+        "    }\n",
+        "    # 1. Configurar la URL con base en los parámetros proporcionados\n",
+        "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&release_date={start_date},{end_date}&user_rating={user_rating}\"\n",
+        "    # 2. Hacer la solicitud HTTP a IMDb con los headers\n",
+        "    response = requests.get(url, headers=headers)\n",
+        "    if response.status_code != 200:\n",
+        "        print(\"Error fetching the IMDb page\")\n",
+        "        return None\n",
+        "    # 3. Parsear el contenido HTML con BeautifulSoup\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    # 4. Extraer los números y títulos de las películas\n",
+        "    titles = soup.find_all('h3', class_='ipc-title__text')\n",
+        "    movie_numbers = [title.text.split('. ', 1)[0] for title in titles if '. ' in title.text]\n",
+        "    movie_titles = [title.text.split('. ', 1)[1] for title in titles if '. ' in title.text]\n",
+        "    # 5. Extraer años, duraciones y ratings\n",
+        "    metadata_elements = soup.find_all(class_='sc-b189961a-8 hCbzGp dli-title-metadata-item')\n",
+        "    years = []\n",
+        "    runtimes = []\n",
+        "    ratings = []\n",
+        "    for element in metadata_elements:\n",
+        "        text = element.text.strip()\n",
+        "        if text.isdigit() and len(text) == 4:\n",
+        "            years.append(text)\n",
+        "        elif 'h' in text and 'm' in text:\n",
+        "            runtimes.append(text)\n",
+        "        elif text in ['G', 'PG', 'PG-13', 'R', 'NC-17']:\n",
+        "            ratings.append(text)\n",
+        "    # 6. Extraer descripción\n",
+        "    description_elements = soup.find_all(class_='ipc-html-content-inner-div')\n",
+        "    descriptions = [desc.text.strip() for desc in description_elements]\n",
+        "    # 7. Extraer votos sin modificar el formato\n",
+        "    votes_elements = soup.find_all(class_='ipc-rating-star--voteCount')\n",
+        "    votes = [vote.text.strip() for vote in votes_elements]\n",
+        "    # 8. Crear el DataFrame con los datos extraídos en el orden especificado\n",
+        "    movie_data = list(zip(movie_numbers, movie_titles, years, ratings, runtimes, descriptions, votes))\n",
+        "    # 9. Convertir la lista de datos en un DataFrame de pandas con el orden solicitado\n",
+        "    df = pd.DataFrame(movie_data, columns=[\"Movie Nr\", \"Title\", \"Year\", \"Rating\", \"Runtime (min)\", \"Description\", \"Votes\"])\n",
+        "    return df\n",
+        "\n",
+        "# Código para probar la función\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Parámetros de prueba\n",
+        "    title_type = 'feature'\n",
+        "    user_rating = '7.5,'\n",
+        "    start_date = '1990-01-01'\n",
+        "    end_date = '1992-12-31'\n",
+        "    # Llamar a la función y obtener el DataFrame\n",
+        "    df = scrape_imdb(title_type, user_rating, start_date, end_date)\n",
+        "    # Mostrar los primeros registros del DataFrame\n",
+        "    print(df.head())"
       ]
     },
     {
@@ -150,19 +230,16 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea",
-      "metadata": {
-        "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea"
-      },
-      "outputs": [],
-      "source": [
-        "# Your solution goes here"
-      ]
+      "cell_type": "markdown",
+      "id": "61b812db",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +255,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
